Add dependencies and update eslint rules

--- a/package.json
+++ b/package.json
@@ -26,6 +26,16 @@
     "url": "https://github.com/Imbricate/Imbricate-Core/issues"
   },
   "homepage": "https://imbricate.io",
+  "dependencies": {
+    "@sudoo/io": "^1.8.0",
+    "@sudoo/marked": "^3.21.4",
+    "@sudoo/marked-mixin-date": "^1.0.0",
+    "@sudoo/marked-mixin-json": "^1.0.0",
+    "@sudoo/marked-mixin-math": "^1.4.0",
+    "@sudoo/marked-mixin-object": "^1.3.0",
+    "@sudoo/marked-mixin-parse": "^1.0.0",
+    "@sudoo/uuid": "^1.1.0"
+  },
   "devDependencies": {
     "@babel/core": "^7",
     "@babel/preset-env": "^7",
