--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@imbricate/core",
   "packageManager": "yarn@4.1.0",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Core for Imbricate",
   "scripts": {
     "test": "jest",
@@ -27,14 +27,12 @@
   },
   "homepage": "https://imbricate.io",
   "dependencies": {
-    "@sudoo/io": "^1.8.0",
     "@sudoo/marked": "^3.21.4",
     "@sudoo/marked-mixin-date": "^1.0.0",
     "@sudoo/marked-mixin-json": "^1.0.0",
     "@sudoo/marked-mixin-math": "^1.4.0",
     "@sudoo/marked-mixin-object": "^1.3.0",
-    "@sudoo/marked-mixin-parse": "^1.0.0",
-    "@sudoo/uuid": "^1.1.0"
+    "@sudoo/marked-mixin-parse": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7",
