Update package.json and tsconfig.build.json

--- a/typescript/tsconfig.build.json
+++ b/typescript/tsconfig.build.json
@@ -6,9 +6,10 @@
         ],
         "outDir": "../app",
         "downlevelIteration": true,
+        "declaration": true,
+        "esModuleInterop": true,
         "skipLibCheck": true,
         "strict": true,
-        "esModuleInterop": true,
         "module": "CommonJS",
         "moduleResolution": "node",
         "isolatedModules": true
