--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@imbricate/core",
   "packageManager": "yarn@4.1.1",
   "version": "1.17.2",
-  "description": "Core for Imbricate",
+  "description": "Imbricate Core, Notebook for Engineers",
   "scripts": {
     "clean": "rm -rf app",
     "test": "jest",
@@ -16,15 +16,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Imbricate/Imbricate-Core.git"
+    "url": "git+https://github.com/Imbricate/Imbricate.git"
   },
   "keywords": [
+    "Notebook",
+    "Engineer",
     "API"
   ],
   "author": "WMXPY",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Imbricate/Imbricate-Core/issues"
+    "url": "https://github.com/Imbricate/Imbricate/issues"
   },
   "homepage": "https://imbricate.io",
   "dependencies": {
