--- a/package.json
+++ b/package.json
@@ -30,17 +30,20 @@
   },
   "homepage": "https://imbricate.io",
   "dependencies": {
-    "@sudoo/marked": "^3.21.4",
     "@sudoo/marked-mixin-date": "^1.0.0",
     "@sudoo/marked-mixin-json": "^1.0.0",
     "@sudoo/marked-mixin-math": "^1.4.0",
     "@sudoo/marked-mixin-object": "^1.3.0",
     "@sudoo/marked-mixin-parse": "^1.0.0"
   },
+  "peerDependencies": {
+    "@sudoo/marked": "*"
+  },
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@sudoo/marked": "^3.21.4",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
