--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,12 @@
 name: Continuous Integration
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+# on:
+# push:
+#   branches:
+#     - main
+# pull_request:
+#   branches:
+#     - main
 
 jobs:
   build:
