refactor: replace HTTP response code with custom action result status

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@imbricate/core",
   "packageManager": "yarn@4.6.0",
-  "version": "3.24.4",
+  "version": "3.25.1",
   "description": "Imbricate Core, Notebook for Engineers",
   "scripts": {
     "clean": "rm -rf app",
@@ -44,7 +44,6 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@sudoo/locale": "^2.0.0",
-    "@sudoo/magic": "^1.9.0"
+    "@sudoo/locale": "^2.0.0"
   }
 }
