--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
-  "dependencies": {
+  "optionalDependencies": {
     "@sudoo/locale": "^2.0.0"
   }
 }
