--- a/packages/imbricate/package.json
+++ b/packages/imbricate/package.json
@@ -30,6 +30,7 @@
     },
     "homepage": "https://imbricate.io",
     "devDependencies": {
+        "@imbricate/eslint-config": "workspace:*",
         "@babel/core": "^7.27.7",
         "@babel/preset-env": "^7.27.2",
         "@babel/preset-typescript": "^7.27.1",
