--- a/packages/imbricate/package.json
+++ b/packages/imbricate/package.json
@@ -31,19 +31,19 @@
     "homepage": "https://imbricate.io",
     "devDependencies": {
         "@imbricate/eslint-config": "workspace:*",
-        "@babel/core": "^7.27.7",
-        "@babel/preset-env": "^7.27.2",
-        "@babel/preset-typescript": "^7.27.1",
-        "@types/jest": "^30.0.0",
-        "@typescript-eslint/eslint-plugin": "^8.35.0",
-        "@typescript-eslint/parser": "^8.35.0",
-        "babel-jest": "^30.0.2",
-        "eslint": "^9.30.0",
-        "jest": "^30.0.3",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.8.3"
+        "@babel/core": "7.28.0",
+        "@babel/preset-env": "7.28.0",
+        "@babel/preset-typescript": "7.27.1",
+        "@types/jest": "30.0.0",
+        "@typescript-eslint/eslint-plugin": "8.39.0",
+        "@typescript-eslint/parser": "8.39.0",
+        "babel-jest": "30.0.5",
+        "eslint": "9.33.0",
+        "jest": "30.0.5",
+        "ts-node": "10.9.2",
+        "typescript": "5.9.2"
     },
     "optionalDependencies": {
-        "@sudoo/locale": "^2.0.0"
+        "@sudoo/locale": "2.0.0"
     }
 }
