--- a/packages/imbricate/package.json
+++ b/packages/imbricate/package.json
@@ -31,17 +31,7 @@
     "homepage": "https://imbricate.io",
     "devDependencies": {
         "@imbricate/eslint-config": "workspace:*",
-        "@babel/core": "7.28.0",
-        "@babel/preset-env": "7.28.0",
-        "@babel/preset-typescript": "7.27.1",
-        "@types/jest": "30.0.0",
-        "@typescript-eslint/eslint-plugin": "8.39.0",
-        "@typescript-eslint/parser": "8.39.0",
-        "babel-jest": "30.0.5",
-        "eslint": "9.33.0",
-        "jest": "30.0.5",
-        "ts-node": "10.9.2",
-        "typescript": "5.9.2"
+        "eslint": "9.33.0"
     },
     "optionalDependencies": {
         "@sudoo/locale": "2.0.0"
