--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@imbricate/core",
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "yarn@4.9.1",
   "version": "3.32.0",
   "description": "Imbricate Core, Notebook for Engineers",
   "scripts": {
