--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,41 +15,34 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+          - windows-latest
+          - macos-latest
         node-version:
-          - 22
-          - 24
+          - 18
+          - 20
         architecture:
           - x64
-          - arm64
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          run_install: false
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           architecture: ${{ matrix.architecture }}
-          cache: pnpm
+          cache: yarn
       - name: Install Dependencies
         run: |
-          pnpm install
+          yarn
       - name: Lint
         run: |
-          pnpm lint
+          yarn lint
       - name: Build
         run: |
-          pnpm build
+          yarn build
       - name: Test
         run: |
-          pnpm coverage
+          yarn coverage
       - name: Codecov
         uses: codecov/codecov-action@v4
         with:
-          fail_ci_if_error: true
-          flags: imbricate
-          files: ./packages/imbricate/coverage/coverage-final.json
           token: ${{ secrets.CODECOV_TOKEN }}
