Enhance .editorconfig by adding specific rules for .dic files and refining settings for JavaScript and JSON file types.

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,15 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{js,json,yml}]
+[*.dic]
+insert_final_newline = false
+
+[*.{js,jsx,ts,tsx}]
+charset = utf-8
+indent_style = space
+indent_size = 4
+
+[*.{json,yml}]
 charset = utf-8
 indent_style = space
 indent_size = 2
