Adds pnpm workspace configuration
Introduces a `pnpm-workspace.yaml` file to manage dependencies and configurations across multiple packages.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "codecov",
         "IMBRISCRIPT",
+        "Maxtimeout",
+        "Mintimeout",
         "sudoo",
         "WMXPY"
     ]
