--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "packageManager": "pnpm@10.28.0",
   "description": "Imbricate Monorepo",
   "scripts": {
-    "test": "jest",
-    "coverage": "jest --coverage",
-    "lint": "eslint src test",
-    "build": "tsc --project typescript/tsconfig.build.json",
-    "compile": "turbo compile"
+    "test": "turbo test",
+    "coverage": "turbo coverage",
+    "lint": "turbo lint",
+    "build": "turbo build",
+    "compile": "turbo compile",
+    "validate": "turbo lint && turbo compile && turbo coverage"
   },
   "devDependencies": {
     "@babel/core": "catalog:",
