--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           fail_ci_if_error: true
-          files: ./packages/core/coverage/coverage-final.json
+          directory: packages/core
           flags: unit-tests
           name: imbricate-core
           token: ${{ secrets.CODECOV_TOKEN }}
