--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,9 +10,9 @@
     "build": "tsc --project typescript/tsconfig.build.json",
     "compile": "tsc --project typescript/tsconfig.compile.json",
     "license": "sdb license",
-    "release": "yarn lint && yarn test && yarn license && yarn build",
-    "publish-dry-run": "yarn release && sdb --only publish-dry-run",
-    "publish": "yarn release && sdb --only publish"
+    "release": "pnpm lint && pnpm test && pnpm license && pnpm build",
+    "publish-dry-run": "pnpm release && sdb --only publish-dry-run",
+    "publish": "pnpm release && sdb --only publish"
   },
   "repository": {
     "type": "git",
