Refactor: migrate `@sudoo` dependencies to pnpm version catalog, consolidate dev dependencies, and update cSpell dictionary.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "IMBRISCRIPT",
         "Maxtimeout",
         "Mintimeout",
+        "RMRF",
         "sudoo",
         "unrs",
         "WMXPY"
