--- a/packages-origin/file-system/package.json
+++ b/packages-origin/file-system/package.json
@@ -29,29 +29,16 @@
   },
   "homepage": "https://imbricate.io",
   "dependencies": {
-    "@sudoo/asynchronous": "^2.4.0",
-    "@sudoo/io": "^1.8.0",
-    "@sudoo/uuid": "^1.1.0"
+    "@sudoo/asynchronous": "catalog:",
+    "@sudoo/io": "catalog:",
+    "@sudoo/uuid": "catalog:"
   },
   "peerDependencies": {
     "@imbricate/core": "*",
     "@sudoo/locale": "*"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.3",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-typescript": "^7.27.1",
-    "@imbricate/core": "^3.32.0",
-    "@imbricate/test-origin-jest": "^3.12.0",
-    "@sudoo/locale": "^2.0.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.41.0",
-    "babel-jest": "^30.1.1",
-    "eslint": "^9.34.0",
-    "jest": "^30.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "@imbricate/core": "workspace:*",
+    "@imbricate/test-origin-jest": "^3.12.0"
   }
 }
