--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
   - packages/*
+  - packages-origin/*
 
 catalog:
   '@babel/core': 7.28.6
@@ -11,8 +12,8 @@ catalog:
   '@sudoo/uuid': 1.1.0
   '@types/jest': 30.0.0
   '@types/node': 25.0.9
-  '@typescript-eslint/eslint-plugin': 8.53.0
-  '@typescript-eslint/parser': 8.53.0
+  '@typescript-eslint/eslint-plugin': 8.53.1
+  '@typescript-eslint/parser': 8.53.1
   babel-jest: 30.2.0
   eslint: 9.39.2
   jest: 30.2.0
