--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "packageManager": "pnpm@10.28.0",
   "description": "Imbricate Monorepo",
   "scripts": {
+    "ud": "pnpm update && pnpm dedupe",
     "test": "turbo test",
     "coverage": "turbo coverage",
     "lint": "turbo lint",
