chore: Add "jscoverage" and "pids" to cSpell dictionary.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
     "cSpell.words": [
         "codecov",
         "IMBRISCRIPT",
+        "jscoverage",
         "Maxtimeout",
         "Mintimeout",
+        "pids",
         "RMRF",
         "sudoo",
         "unrs",
