chore: update @imbricate/test-origin-jest dev dependency to use a workspace reference.

--- a/packages-origin/file-system/package.json
+++ b/packages-origin/file-system/package.json
@@ -40,6 +40,6 @@
   },
   "devDependencies": {
     "@imbricate/core": "workspace:*",
-    "@imbricate/test-origin-jest": "^3.12.0"
+    "@imbricate/test-origin-jest": "workspace:*"
   }
 }
