refactor: centralize ESLint configuration by extracting common rules into a shared internal package.

--- a/packages-origin/file-system/package.json
+++ b/packages-origin/file-system/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@imbricate/core": "workspace:*",
-    "@imbricate/test-origin-jest": "workspace:*"
+    "@imbricate/test-origin-jest": "workspace:*",
+    "@imbricate-internal/eslint-config": "workspace:*"
   }
 }
