feat: Replace `@sudoo` dependencies with `axios` in `stack-api`, update pnpm configuration, and add `axios` to cSpell words.

--- a/packages-origin/stack-api/package.json
+++ b/packages-origin/stack-api/package.json
@@ -28,13 +28,10 @@
   },
   "homepage": "https://imbricate.io",
   "dependencies": {
-    "@sudoo/asynchronous": "catalog:",
-    "@sudoo/io": "catalog:",
-    "@sudoo/uuid": "catalog:"
+    "axios": "catalog:"
   },
   "peerDependencies": {
-    "@imbricate/core": "*",
-    "@sudoo/locale": "*"
+    "@imbricate/core": "*"
   },
   "devDependencies": {
     "@imbricate/core": "workspace:*",
