--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,6 +14,7 @@ catalog:
   '@types/node': 25.0.9
   '@typescript-eslint/eslint-plugin': 8.53.1
   '@typescript-eslint/parser': 8.53.1
+  axios: 1.13.2
   babel-jest: 30.2.0
   eslint: 9.39.2
   jest: 30.2.0
