--- a/packages/stack-up/package.json
+++ b/packages/stack-up/package.json
@@ -33,26 +33,10 @@
   "homepage": "https://imbricate.io",
   "dependencies": {
     "@imbricate/core": "workspace:*",
-    "@sudoo/io": "^1.8.0",
-    "body-parser": "^2.2.0",
-    "commander": "^14.0.1",
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-typescript": "^7.27.1",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.8.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.1",
-    "@typescript-eslint/parser": "^8.46.1",
-    "babel-jest": "^30.2.0",
-    "eslint": "^9.38.0",
-    "jest": "^30.2.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "@sudoo/io": "catalog:",
+    "body-parser": "catalog:",
+    "commander": "catalog:",
+    "cors": "catalog:",
+    "express": "catalog:"
   }
 }
