--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "packageManager": "pnpm@10.28.0",
+  "packageManager": "pnpm@10.28.1",
   "description": "Imbricate Monorepo",
   "scripts": {
     "ud": "pnpm update && pnpm dedupe",
@@ -23,7 +23,7 @@
     "eslint": "catalog:",
     "jest": "catalog:",
     "ts-node": "catalog:",
-    "typescript": "catalog:",
-    "turbo": "catalog:"
+    "turbo": "catalog:",
+    "typescript": "catalog:"
   }
 }
