--- a/packages/stack-up/package.json
+++ b/packages/stack-up/package.json
@@ -38,5 +38,8 @@
     "commander": "catalog:",
     "cors": "catalog:",
     "express": "catalog:"
+  },
+  "devDependencies": {
+    "@imbricate-internal/eslint-config": "workspace:*"
   }
 }
