build: Add `@types/cors` and `@types/express` as dev dependencies to the `stack-up` package and workspace overrides.

--- a/packages/stack-up/package.json
+++ b/packages/stack-up/package.json
@@ -40,6 +40,8 @@
     "express": "catalog:"
   },
   "devDependencies": {
-    "@imbricate-internal/eslint-config": "workspace:*"
+    "@imbricate-internal/eslint-config": "workspace:*",
+    "@types/cors": "catalog:",
+    "@types/express": "catalog:"
   }
 }
