deps: Add `@types/body-parser` as a catalog development dependency for the `stack-up` package.

--- a/packages/stack-up/package.json
+++ b/packages/stack-up/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@imbricate-internal/eslint-config": "workspace:*",
+    "@types/body-parser": "catalog:",
     "@types/cors": "catalog:",
     "@types/express": "catalog:"
   }
