Adds compile script to build configs
Adds a `compile` script to the build configurations of the `stack-up` and `test-origin-jest` packages.

--- a/packages/stack-up/package.json
+++ b/packages/stack-up/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint src",
     "clean": "rm -rf app",
     "build": "tsc --project typescript/tsconfig.build.json",
+    "compile": "tsc --project typescript/tsconfig.compile.json",
     "license": "sdb license",
     "lock-dedupe": "pnpm dedupe --strategy highest",
     "add-bin": "ts-node --project typescript/tsconfig.script.json scripts/add-bin.ts",
