feat(core): Add optional dependencies for built-in origins

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,6 +31,8 @@
   },
   "homepage": "https://imbricate.io",
   "optionalDependencies": {
+    "@imbricate/origin-file-system": "workspace:*",
+    "@imbricate/origin-quick-action": "workspace:*",
     "@sudoo/locale": "catalog:"
   },
   "devDependencies": {
