--- a/packages/stack-up/package.json
+++ b/packages/stack-up/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://imbricate.io",
   "dependencies": {
     "@imbricate/core": "workspace:*",
+    "@imbricate/origin-loader": "workspace:*",
     "@sudoo/io": "catalog:",
     "body-parser": "catalog:",
     "commander": "catalog:",
