--- a/packages/stack-up/package.json
+++ b/packages/stack-up/package.json
@@ -7,7 +7,7 @@
     "coverage": "jest --coverage",
     "lint": "eslint src",
     "clean": "rm -rf app",
-    "start": "ts-node --project typescript/tsconfig.script.json src/cli.ts",
+    "start": "ts-node --project typescript/tsconfig.script.json scripts/execute-cli.ts",
     "build": "tsc --project typescript/tsconfig.build.json",
     "compile": "tsc --project typescript/tsconfig.compile.json",
     "license": "sdb license",
